--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     </div>
                     
                     <div class="col m-2">
-                        <ul v-for="i in emailArray.length" :class="view_hide?'view':'hide'">
+                        <ol :class="view_hide?'view':'hide'">
                             <!-- i-1 perchè indice i di v-for va da 1 a email.length, mentre array email ha elementi in posizione 0 a email.length -1 -->
-                            <li class="list-unstyled">{{i}} ) {{emailArray[i-1]}}</li>
-                        </ul>
+                            <li v-for="i in emailArray.length"> {{emailArray[i-1]}}</li>
+                        </ol>
                     </div>
 
                 </div>
